# krishnabhunia.github.io

./: .gitignore  CODE_REVIEW.md  CODE_REVIEW_PYTHON.md  PYTHON_DEV.md  README.md  index.html  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
.github/scripts/: generate-manifest.js
.github/workflows/: update-manifest.yml
download/: manifest.json
krishnabhunia/: __init__.py  portfolio.py  utils.py
scripts/: dynamic-downloads.js  photo-zoom.js  tabs.js
styles/: main.css
tests/: __init__.py  test_portfolio.py  test_utils.py
