[project]
name = "krishnabhunia-github-io"
version = "0.1.0"
description = ""
authors = [
    {name = "KRISHNA DIPAYAN BHUNIA",email = "krishnabhunia@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "krishnabhunia"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
